--- a/packages/@geee-be/react-twui/.storybook/preview-head.html
+++ b/packages/@geee-be/react-twui/.storybook/preview-head.html
@@ -9,6 +9,8 @@
     position: absolute;
     width: 100vw;
     font-family: Montserrat, sans-serif;
+    background-color: var(--color-background);
+    color: var(--color-foreground);
   }
   .innerZoomElementWrapper {
     display: flex;
